@@ -264,6 +264,11 @@ module ActiveMerchant # :nodoc:
         post[:metadata][:merchant_payment_code] = order_id_override(options)
         post[:payment][:tags] = TAGS
         post[:payment][:notification_url] = options[:notification_url] if options[:notification_url]
+        if options[:payment_taxes_iva_co]
+          post[:payment][:taxes] = {
+            iva_co: options[:payment_taxes_iva_co]
+          }
+        end
       end
 
       def parse(body)
